# Autoresponse

./: .depcheckrc  .oxlintignore  .oxlintrc.json  .prettierignore  README.md  cypress.config.ts  package.json  sonar-project.properties  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml  frontend.yml  rust-tauri.yml
.storybook/: main.ts
coverage/: coverage-final.json  coverage-summary.json
src/: App.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/docs/: API.md  BACKEND.md  DEVELOPMENT.md
src-tauri/docs/shared/: types.md
src-tauri/src/: lib.rs  main.rs  test_utils.rs
src-tauri/src/application/: mod.rs
src-tauri/src/application/use_cases/: mcp_server_use_cases.rs  mod.rs  notification_use_cases.rs  service_config_use_cases.rs
src-tauri/src/commands/: mod.rs  oauth.rs  setup.rs
src-tauri/src/domain/: error.rs  mod.rs
src-tauri/src/domain/entities/: mod.rs  notification.rs  notification_preferences.rs  service_config.rs
src-tauri/src/domain/events/: mod.rs  notification_events.rs  publisher.rs
src-tauri/src/domain/repositories/: mod.rs  notification_repository.rs  service_config_repository.rs
src-tauri/src/domain/services/: mod.rs  notification_service.rs  search.rs  service_config_service.rs
src-tauri/src/domain/services/actions/: executor.rs  mod.rs
src-tauri/src/domain/services/ai/: mcp_connector.rs  mod.rs  types.rs
src-tauri/src/domain/services/ai/services/: mod.rs  ollama_service.rs
src-tauri/src/domain/services/background/: manager.rs  mcp_server_job.rs  mod.rs  notification_processor.rs  types.rs
src-tauri/src/domain/services/integrations/: github.rs  gitlab.rs  google.rs  jira.rs  linkedin.rs  manager.rs  microsoft.rs  mod.rs  service_bridge.rs
src-tauri/src/infrastructure/: config.rs  env.rs  mod.rs
src-tauri/src/infrastructure/repositories/: cached_repository.rs  mod.rs  service_config_repository.rs  sqlite_base.rs  sqlite_notification_repository.rs  sqlite_service_config_repository.rs
src-tauri/src/infrastructure/services/: mcp_server.rs  mod.rs  oauth.rs  oauth_coordinator.rs
src-tauri/src/presentation/: mod.rs
src-tauri/src/presentation/controllers/: mod.rs  notification_controller.rs  service_config_controller.rs
src-tauri/src/presentation/dtos/: mod.rs  notification.rs  service_config.rs  setup.rs  validation.rs
src-tauri/src/presentation/middleware/: mod.rs  validation.rs
src-tauri/tests/: mod.rs
src-tauri/tests/common/: mock.rs  mod.rs  test_utils.rs
src-tauri/tests/e2e/: mod.rs  notification_actions.rs  setup.rs
src-tauri/tests/integration/: action_test.rs  cached_repository_test.rs  event_test.rs  job_test.rs  mcp_server_test.rs  mod.rs  notification_test.rs  processor_test.rs  service_config_test.rs
src/components/settings/: OAuthConfig.tsx
src/features/setup-wizard/: SetupWizard.tsx  SetupWizardProvider.tsx
src/features/setup-wizard/WizardSteps/: AIConfigStep.tsx  FinishStep.tsx  NotificationsStep.tsx  ServicesStep.tsx  WelcomeStep.tsx  index.ts
src/features/setup-wizard/hooks/: useDeepLinkAuth.tsx
src/types/: services.ts
