[package]
name = "autoresponse"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "autoresponse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.29", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "1.0"
mockall = "0.11"
dotenv = "0.15.0"
validator = { version = "0.16", features = ["derive"] }
validator_derive = "0.16"
reqwest = { version = "0.11", features = ["json"] }
directories = "5.0"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
tempfile = "3.19.1"
once_cell = "1.18"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
