[package]
name = "autoresponse"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "autoresponse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.98"
moka = { version = "0.12", features = ["future"] }
rusqlite = { version = "0.29", features = ["bundled"] }
parking_lot = "0.12"
tokio = { version = "1.0", features = ["full"] }
tauri = { version = "2", features = ["test"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "1.0"
mockall = "0.11"
dotenv = "0.15.0"
validator = { version = "0.20", features = ["derive"] }
validator_derive = "0.20"
reqwest = { version = "0.11", features = ["json"] }
directories = "5.0"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
tempfile = "3.19.1"
once_cell = "1.18"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
lazy_static = "1.4"
axum = { version = "0.8.4" }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["cors"] }
http-body-util = "0.1.3"

[dev-dependencies]
wiremock = "0.5"
test-case = "3.3"
tokio-test = "0.4"
pretty_assertions = "1.4"
